ecmascript/parser/tests/test262-error-references/fail/743e2b125ba6d248.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/743e2b125ba6d248.js:2:7
  |
2 |  isnt y
  |       ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/743e2b125ba6d248.js:2:2
  |
2 |  isnt y
  |  ^^^^

